Adicionado arquivo readme.md

--- a/media.css
+++ b/media.css
@@ -1,4 +1,4 @@
-@media screen and ( max-width: 760px) {
+@media screen and ( max-width: 999px) {
     header {
         flex-direction: column;
     }
@@ -22,5 +22,33 @@
         text-align: center;
     }
 
-    
+    .menu-horizontal {
+        margin: 0;
+        height: 3rem;
+        padding-top: 2rem;
+    }
+
+    .logo-menu {
+        margin-left: 0px;
+    }
+
+    .newslatter {
+        width: 350px;
+        height: auto;
+    }
+    .form-newslatter {
+        width: 100% !important;
+        max-height: 8rem;
+    }
+
+    .form-newslatter input {
+        width: 100% !important;
+    }
+
+
+    .rodape-contato { 
+        font-size: 16px;
+        height:15rem;
+    }
+
 }
