--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ main {
 }
 
 #orcamento-btn {
-    border: 2px solid rgb(132, 14, 201);
+    border: 2px solid rebeccapurple;
     padding: 10px;
     border-radius: 10px;
 }
 
 #orcamento-btn:hover{
-    background-color: blueviolet;
+    background-color: rebeccapurple;
     color: white;
 }
 
@@ -63,7 +63,7 @@ a {
     color: white
 }
 a:hover {
-    color: blueviolet;
+    color: rebeccapurple;
     transition: 0.3s all;
 }
 
@@ -76,14 +76,16 @@ a:hover {
 
 .rodape-contato {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
-    height: 10rem;
+    height: 4rem;
     width: 100%;
     align-items: center;
-    margin-top: 10rem;
+    margin-top: 15rem;
+    text-align: center;
    
 }
+
 .imagem-app {
     width: 100%;
     height: 68rem;
@@ -97,18 +99,29 @@ article {
     background-size: cover ;*/
     width: 100%;
     height: 88vh;
+    padding-left: 4rem;
     
    
+}
+article h1 {
+    display: flex;
+    font-size: 60px;
+    justify-content: start;
+    font-family: 'Open Sans', sans-serif;
+    width: 100%;
+    padding: 0px !important;
+    color: rebeccapurple;
+    
 }
 
 article h2 {
     display: flex;
     font-size: 50px;
-    justify-content: space-around;
+    justify-content: start;
     font-family: 'Open Sans', sans-serif;
     width: 100%;
     line-height: 3rem;
-    padding: 2rem;
+    padding: 0px !important;
     
     
 }
@@ -120,4 +133,21 @@ input {
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+}
+
+#whatsapp {
+    background: url("imagens/whatsapp.png");
+    background-size: 50px 50px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    
+}
+
+#email {
+    background: url("imagens/gmail.png");
+    background-size: 50px 50px;
+    background-repeat: no-repeat;
+    background-size: contain;
+       
+    
 }
