--- a/newslatter.css
+++ b/newslatter.css
@@ -56,12 +56,14 @@ input {
 }
 
 .newslatter {
-    height: 24rem;
+    
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    align-items: center;
+    margin: 0px 100px 0px 0px;
     
 }
