--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@ a:hover {
     padding: 10px;
 }
 
+.icon-redes-sociais li:hover {
+    transform: scale(1.1);
+}
+
 .tex-icon-redes-sociais{
     display: flex;
     justify-content: center;
@@ -145,6 +149,16 @@ a:hover {
 .text-mobile {
     width: 30%;
 }
+
+.text-mobile h2 {
+    font-size: 36px;
+}
+
+.text-mobile h3 {
+    font-size: 24px;
+    margin-top: 1em;
+}
+
 .img-mobile {
   background-image: url("imagens/celular-vetor-editado2.png");
   height: 400px;
